--- a/about.html
+++ b/about.html
@@ -191,11 +191,6 @@
             </div>
         </div>
 
-
-
-
-
-
         <footer class="site-footer">
             <div class="container">
                 <div class="row">
@@ -209,10 +204,10 @@
                             <div class="col-md-3 ml-auto">
                                 <h2 class="footer-heading mb-4">Quick Links</h2>
                                 <ul class="list-unstyled">
-                                    <li><a href="#about-section" class="smoothscroll">About Us</a></li>
-                                    <li><a href="#services-section" class="smoothscroll">Services</a></li>
+                                    <li><a href="about.html" class="smoothscroll">About Us</a></li>
+                                    <li><a href="index.html" class="smoothscroll">Services</a></li>
                                     <!-- <li><a href="#vision-s" class="smoothscroll">Testimonials</a></li> -->
-                                    <li><a href="#contact-section" class="smoothscroll">Contact Us</a></li>
+                                    <li><a href="index.html" class="smoothscroll">Contact Us</a></li>
                                     <li><a href="tc.html" class="smoothscroll">Terms and Condition</a></li>
                                     <li><a href="tc.html" class="smoothscroll">Join us </a></li>
                                 </ul>
