--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
     <link rel="stylesheet" href="css/aos.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="shortcut icon" href="images/logo2.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/parkoba icon .jpg" type="image/x-icon">
 </head>
 
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
