--- a/about.html
+++ b/about.html
@@ -127,7 +127,7 @@
                 <div class="row">
                     <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="">
                         <figure class="circle-bg">
-                            <img src="img/key.webp" alt="Image" class="img-fluid">
+                            <img src="img/ca.jpg" alt="Image" class="img-fluid">
                         </figure>
                     </div>
                     <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
@@ -182,7 +182,7 @@
 
                     <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="">
                         <figure class="circle-bg">
-                            <img src="img/key.webp" alt="Image" class="img-fluid">
+                            <img src="img/cars3.jpg" alt="Image" class="img-fluid">
                         </figure>
                     </div>
 
