--- a/tc.html
+++ b/tc.html
@@ -43,7 +43,7 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-6 col-xl-2">
-                        <a href="#"> <img src="img/check.jpg" class="mb-0 site-logo"><a href="index.html"
+                        <a href="#"> <img src="img/parkoba icon no bg  .png" class="mb-0 site-logo"><a href="index.html"
                                 class="h2 mb-0"><span class="text-primary"></span></a>
                             </img>
                         </a>
