--- a/about.html
+++ b/about.html
@@ -46,8 +46,8 @@
                 <div class="row align-items-center">
 
                     <div class="col-6 col-xl-2">
-                        <a href="index.html"> <img src="img/check.jpg" class="mb-0 site-logo"><a href="index.html"
-                                class="h2 mb-0"><span class="text-primary"></span></a>
+                        <a href="index.html"> <img src="img/parkoba icon no bg  .png" class="mb-0 site-logo"><a
+                                href="index.html" class="h2 mb-0"><span class="text-primary"></span></a>
                             </img>
                         </a>
                     </div>
@@ -93,7 +93,7 @@
 
         </header>
 
-        <div class="site-blocks-cover overlay" style="background-image: url(img/dp.webp);" data-aos="fade"
+        <div class="site-blocks-cover overlay" style="background-image: url(img/cars1.jpg);" data-aos="fade"
             id="home-section">
 
             <div class="container">
@@ -157,8 +157,6 @@
                         </div>
                     </div>
 
-
-
                     <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
                         <div class="mb-4">
                             <!-- <h3 class="h3 mb-4 text-black">About Parkoba </h3> -->
@@ -174,12 +172,11 @@
                                 In conclusion, our parking website is your go-to destination for all your parking needs.
                                 With a wide range of parking options, real-time availability and pricing information,
                                 and a commitment to safety and security, we're here to make your parking experience
-                                stress-free and convenient. So why wait? Start browsing our website today to find the
+                                stress-free and convenient. So why wait? Download our App today to book the
                                 perfect parking spot for you!
                             </p>
                         </div>
                     </div>
-
                     <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="">
                         <figure class="circle-bg">
                             <img src="img/cars3.jpg" alt="Image" class="img-fluid">
