--- a/about.html
+++ b/about.html
@@ -102,9 +102,9 @@
                         <h1 class="text-uppercase" data-aos="fade-up">About Parkoba</h1>
                         <!-- <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">Parkoba</p> -->
                         <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">Park with Pride </p>
-                        <!-- <div data-aos="fade-up" data-aos-delay="100">
-                            <a href="give.html" class="btn smoothscroll btn-primary mr-2 mb-2">what we do</a>
-                        </div> -->
+                        <div data-aos="fade-up" data-aos-delay="100">
+                            <a href="app.html" class="btn smoothscroll btn-primary mr-2 mb-2">Book Parking </a>
+                        </div>
                     </div>
 
                 </div>
