--- a/app.html
+++ b/app.html
@@ -150,8 +150,8 @@
                                         </path>
                                     </svg>
                                     <span class="texts">
-                                        <span class="text-1">Download it on </span>
-                                        <span class="text-2">Google Play</span>
+                                        <span class="text-1">Download now </span>
+                                        <!-- <span class="text-2">Google Play</span> -->
                                     </span>
                                 </a>
                             </div>
