--- a/about.html
+++ b/about.html
@@ -205,7 +205,8 @@
                                     <li><a href="index.html" class="smoothscroll">Services</a></li>
                                     <!-- <li><a href="#vision-s" class="smoothscroll">Testimonials</a></li> -->
                                     <li><a href="index.html" class="smoothscroll">Contact Us</a></li>
-                                    <li><a href="tc.html" class="smoothscroll">Terms and Condition</a></li>
+                                    <li><a href="https://drive.google.com/file/d/1mO25DjjqNH7ULJmgB3cTCID4RJIg2MlE/view?usp=sharing"
+                                            class="smoothscroll">Terms and Condition</a></li>
                                     <li><a href="tc.html" class="smoothscroll">Join us </a></li>
                                 </ul>
                             </div>
