--- a/app.html
+++ b/app.html
@@ -106,9 +106,9 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="">
-                        <figure class="circle-bg">
+                        <!-- <figure class="circle-bg"> -->
                             <img src="img/phone.jpg" alt="Image" class="img-fluid">
-                        </figure>
+                        <!-- </figure> -->
                     </div>
                     <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
                         <div class="mb-4">
