--- a/index.html
+++ b/index.html
@@ -60,36 +60,18 @@
 
               <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
                 <li><a href="#home-section" class="nav-link">Home</a></li>
-                <li class="has-children">
+                <li>
                   <a href="#about-section" class="nav-link">About Us</a>
-                  <ul class="dropdown">
-                    <li><a href="#Booking" class="nav-link">Booking Hours</a></li>
-                    <!-- <li><a href="#pricing-section" class="nav-link">Services</a></li> -->
-                    <li><a href="tc.html" class="nav-link">FAQ</a></li>
-                    <!-- <li class="has-children">
-                      <a href="#">More Links</a>
-                      <ul class="dropdown">
-                        <li><a href="#">Menu One</a></li>
-                        <li><a href="#">Menu Two</a></li>
-                        <li><a href="#">Menu Three</a></li>
-                      </ul>
-                    </li> -->
-                  </ul>
                 </li>
-
-                <!-- <li><a href="gallery.html" target="_blank" class="nav-link">Gallery</a></li> -->
                 <li><a href="#services-section" class="nav-link">Services</a></li>
-                <!-- <li><a href="#testimonials-section" class="nav-link">Testimonials</a></li> -->
                 <li><a href="#contact-section" class="nav-link">Contact</a></li>
-                <!-- <li><a href="#get-parking-section" target="_blank" class="nav-link">Get Parking</a></li> -->
+                <li><a href="Get-parking.html" class="nav-link">Get Parking</a></li>
+                <li><a href="tc.html" class="nav-link">FAQ</a></li>
               </ul>
             </nav>
           </div>
-
-
           <div class="col-6 d-inline-block d-xl-none ml-md-0 py-3" style="position: relative; top: 3px;"><a href="#"
               class="site-menu-toggle js-menu-toggle float-right"><span class="icon-menu h3"></span></a></div>
-
         </div>
       </div>
 
@@ -131,7 +113,7 @@
         <div class="row">
           <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="">
             <!-- <figure class="circle-bg"> -->
-              <img src="img/key.webp" alt="Image" class="img-fluid">
+            <img src="img/key.webp" alt="Image" class="img-fluid">
             <!-- </figure> -->
           </div>
           <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
@@ -148,7 +130,23 @@
                 Our team consists of experienced professionals who are passionate about making your parking experience
                 stress-free and easy. We believe that parking should be hassle-free, which is why we offer a wide range
                 of parking options to choose from, including indoor and outdoor parking lots, valet parking, and hourly
-                or daily parking rates. <span> <a href="about.html">Read More</a> </span>
+                or daily parking rates. <span> <button class="c-button c-button--gooey"> Hover me
+                    <div class="c-button__blobs">
+                      <div></div>
+                      <div></div>
+                      <div></div>
+                    </div>
+                  </button>
+                  <svg xmlns="http://www.w3.org/2000/svg" version="1.1" style="display: block; height: 0; width: 0;">
+                    <defs>
+                      <filter id="goo">
+                        <feGaussianBlur in="SourceGraphic" stdDeviation="10" result="blur"></feGaussianBlur>
+                        <feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 18 -7"
+                          result="goo"></feColorMatrix>
+                        <feBlend in="SourceGraphic" in2="goo"></feBlend>
+                      </filter>
+                    </defs>
+                  </svg> </span>
                 <br>
                 <!--   We understand that finding a parking spot can be a challenge, especially in busy areas. That's why we
                 have designed our website to provide you with real-time availability and pricing information, allowing
@@ -189,7 +187,7 @@
         <div class="row">
           <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="">
             <!-- <figure class="circle-bg"> -->
-              <img src="img/space.webp" alt="Image" class="img-fluid">
+            <img src="img/space.webp" alt="Image" class="img-fluid">
             <!-- </figure> -->
           </div>
           <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
