--- a/index.html
+++ b/index.html
@@ -130,46 +130,21 @@
                 Our team consists of experienced professionals who are passionate about making your parking experience
                 stress-free and easy. We believe that parking should be hassle-free, which is why we offer a wide range
                 of parking options to choose from, including indoor and outdoor parking lots, valet parking, and hourly
-                or daily parking rates. <span> <button class="c-button c-button--gooey"> Hover me
+                or daily parking rates. <span> <button class="c-button c-button--gooey">
                     <div class="c-button__blobs">
                       <div></div>
                       <div></div>
                       <div></div>
                     </div>
                   </button>
-                  <svg xmlns="http://www.w3.org/2000/svg" version="1.1" style="display: block; height: 0; width: 0;">
-                    <defs>
-                      <filter id="goo">
-                        <feGaussianBlur in="SourceGraphic" stdDeviation="10" result="blur"></feGaussianBlur>
-                        <feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 18 -7"
-                          result="goo"></feColorMatrix>
-                        <feBlend in="SourceGraphic" in2="goo"></feBlend>
-                      </filter>
-                    </defs>
-                  </svg> </span>
+                  <button class="learn-more">
+                    <span class="circle" aria-hidden="true">
+                      <span class="icon arrow"></span>
+                    </span>
+                    <span class="button-text">Read More</span>
+                  </button></span>
                 <br>
-                <!--   We understand that finding a parking spot can be a challenge, especially in busy areas. That's why we
-                have designed our website to provide you with real-time availability and pricing information, allowing
-                you to make informed decisions about where to park. We also offer flexible booking options, so you can
-                easily adjust your parking plans as needed.
 
-                At our parking website, we prioritize your safety and security. We partner with reputable parking
-                providers who offer secure parking facilities with 24/7 surveillance and on-site staff to ensure your
-                vehicle is always safe. We also use advanced technology to ensure that your payment and personal
-                information is secure and protected.
-                <br>
-                We are committed to providing you with the best customer service and support. Our friendly and
-                knowledgeable customer service team is always available to answer any questions you may have and to
-                assist you in any way possible. We strive to make your parking experience as smooth and enjoyable as
-                possible, so you can focus on your day without worrying about your car.
-                <br>
-                In summary, our parking website offers a comprehensive range of parking services that are safe, secure,
-                and convenient. With real-time availability and pricing information, flexible booking options, and a
-                dedicated customer service team, we are your trusted partner for all your parking needs. So, start
-                browsing our website today to find the perfect parking spot for you!
-                Explore the rest of our site to learn more about what we have to offer, and get in touch with any
-                questions. Parkoba is here for you.
-               </p> -->
             </div>
           </div>
         </div>
@@ -219,15 +194,6 @@
             <div class="owl-carousel slide-one-item-alt">
               <img src="img/many.webp" alt="Image" class="img-fluid">
               <img src="img/DACE.webp" alt="Image" class="img-fluid">
-              <!-- <img src="images/4.jpg" alt="Image" class="img-fluid">
-              <img src="images/56.jpg" alt="Image" class="img-fluid">
-              <img src="images/6.jpg" alt="Image" class="img-fluid">
-              <img src="images/55.jpg" alt="Image" class="img-fluid">
-              <img src="images/57.jpg" alt="Image" class="img-fluid">
-              <img src="images/58.jpg" alt="Image" class="img-fluid">
-              <img src="images/55.jpg" alt="Image" class="img-fluid">
-              <img src="images/53.jpg" alt="Image" class="img-fluid">
-              <img src="images/52.jpg" alt="Image" class="img-fluid"> -->
             </div>
             <div class="custom-direction">
               <a href="#" class="custom-prev"><span><span class="icon-keyboard_backspace"></span></span></a><a href="#"
@@ -374,9 +340,6 @@
 
         </div>
     </section>     -->
-
-
-
 
     <section class="site-section bg-light" id="contact-section" data-aos="fade">
       <div class="container">
