--- a/index.html
+++ b/index.html
@@ -137,12 +137,12 @@
                       <div></div>
                     </div>
                   </button>
-                  <button class="learn-more">
-                    <span class="circle" aria-hidden="true">
-                      <span class="icon arrow"></span>
-                    </span>
-                    <span class="button-text">Read More</span>
-                  </button></span>
+                  <a href="about.html"><button class="learn-more">
+                      <span class="circle" aria-hidden="true">
+                        <span class="icon arrow"></span>
+                      </span>
+                      <span class="button-text">Read More</span>
+                    </button></span></a>
                 <br>
 
             </div>
