--- a/about.html
+++ b/about.html
@@ -56,12 +56,12 @@
                         <nav class="site-navigation position-relative text-right" role="navigation">
 
                             <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
-                                <li><a href="#home-section" class="nav-link">Home</a></li>
+                                <li><a href="index.html" class="nav-link">Home</a></li>
                                 <li>
-                                    <a href="#about-section" class="nav-link">About Us</a>
+                                    <a href="index.html#about-section" class="nav-link">About Us</a>
                                 </li>
-                                <li><a href="#services-section" class="nav-link">Services</a></li>
-                                <li><a href="#contact-section" class="nav-link">Contact</a></li>
+                                <li><a href="index.html#services-section" class="nav-link">Services</a></li>
+                                <li><a href="index.html#contact-section" class="nav-link">Contact</a></li>
                                 <li><a href="Get-parking.html" class="nav-link">Get Parking</a></li>
                                 <li><a href="tc.html" class="nav-link">FAQ</a></li>
                             </ul>
