--- a/tc.html
+++ b/tc.html
@@ -109,10 +109,10 @@
                             <div class="col-md-3 ml-auto">
                                 <h2 class="footer-heading mb-4">Quick Links</h2>
                                 <ul class="list-unstyled">
-                                    <li><a href="about.html" class="smoothscroll">About Us</a></li>
-                                    <li><a href="#services-section" class="smoothscroll">Services</a></li>
+                                    <li><a href="index.htmlabout.html" class="smoothscroll">About Us</a></li>
+                                    <li><a href="index.html#services-section" class="smoothscroll">Services</a></li>
                                     <!-- <li><a href="#vision-s" class="smoothscroll">Testimonials</a></li> -->
-                                    <li><a href="#contact-section" class="smoothscroll">Contact Us</a></li>
+                                    <li><a href="index.html#contact-section" class="smoothscroll">Contact Us</a></li>
                                     <li><a href="tc.html" class="smoothscroll">Terms and Condition</a></li>
                                     <li><a href="tc.html" class="smoothscroll">Join us </a></li>
 
